--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_AUTHOR=MICHEL_Michaël
 APP_SECRET=c7866d816cc03778d0d8e141b788cde2
 ###< symfony/framework-bundle ###
 
@@ -27,6 +28,6 @@ APP_SECRET=c7866d816cc03778d0d8e141b788cde2
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL=mysql://root@127.0.0.1:3306/olfp_sf5?serverVersion=5.7
+#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
