--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,2 +1,5 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    globals:
+        auteur: '%env(APP_AUTHOR)%'
+    form_themes: ['bootstrap_4_layout.html.twig']
