--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ APP_SECRET=c7866d816cc03778d0d8e141b788cde2
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://1e9a0eeda636b9:64faa6d7e0bd01@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,6 +28,6 @@ APP_SECRET=c7866d816cc03778d0d8e141b788cde2
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL=mysql://root@127.0.0.1:3306/olfp_sf5?serverVersion=5.7
+DATABASE_URL=mysql://root@127.0.0.1:3306/olfp_sf5?serverVersion=5.7.31
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
